Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             gap: 15px; 
         }
 
-        /* Fotoğraf Kartı Tasarımı */
+        /* ğraf Kartı Tasarımı */
         .photo-card {
             background: white; 
             border-radius: 10px; 
@@ -148,7 +148,7 @@
 <body>
 
 <div class="header">
-    <h2>Foto PDF V3</h2>
+    <h2>Photo 2 PDF V.1.1</h2>
     <span class="page-counter" id="pageCounter">0 Sayfa</span>
 </div>
 
@@ -370,3 +370,4 @@
 
 </body>
 </html>
+
