--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
-<title>Photo to PDF</title>
+<title>ZAPHYROS Photo Tools</title>
 <link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=DM+Sans:wght@400;500&family=Dancing+Script:wght@600;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.15.0/Sortable.min.js"></script>
@@ -199,6 +199,12 @@ input[type=range]{accent-color:var(--acc);cursor:pointer;width:80px}
   background:transparent;border:1px solid var(--border);color:var(--red);
   border-radius:7px;width:30px;height:30px;cursor:pointer;font-size:13px;
   flex-shrink:0;display:flex;align-items:center;justify-content:center;
+}
+.close-doc-btn{
+  background:rgba(224,82,82,.15);border:1px solid var(--red);color:var(--red);
+  border-radius:8px;width:32px;height:32px;cursor:pointer;font-size:16px;
+  flex-shrink:0;display:flex;align-items:center;justify-content:center;
+  margin-left:auto;z-index:10;touch-action:manipulation;
 }
 
 /* ─── SIGN TAB ─── */
@@ -459,7 +465,6 @@ input[type=range]{accent-color:var(--acc);cursor:pointer;width:80px}
 </head>
 <body>
 
-<!-- HEADER -->
 <header>
   <div class="h-brand">
     <div class="h-title">Photo to <span>PDF</span></div>
@@ -472,7 +477,6 @@ input[type=range]{accent-color:var(--acc);cursor:pointer;width:80px}
   </div>
 </header>
 
-<!-- NAV CARDS -->
 <div class="nav-cards">
   <div class="nc c1 active" data-tab="photo">
     <div class="nc-icon">📷</div>
@@ -482,17 +486,16 @@ input[type=range]{accent-color:var(--acc);cursor:pointer;width:80px}
     <div class="nc-icon">🔗</div>
     <div data-i="nav_merge">Birleştir</div>
   </div>
-  <div class="nc c3" data-tab="sign">
-    <div class="nc-icon">✍️</div>
-    <div data-i="nav_sign">İmzala</div>
-  </div>
   <div class="nc c4" data-tab="split">
     <div class="nc-icon">✂️</div>
     <div data-i="nav_split">PDF Böl</div>
   </div>
+  <div class="nc c3" data-tab="sign">
+    <div class="nc-icon">✍️</div>
+    <div data-i="nav_sign">İmzala</div>
+  </div>
 </div>
 
-<!-- ═══ PHOTO TAB ═══ -->
 <div class="tab-panel active" id="tab-photo">
   <div class="sbar">
     <div class="sc">
@@ -547,7 +550,6 @@ input[type=range]{accent-color:var(--acc);cursor:pointer;width:80px}
   </div>
 </div>
 
-<!-- ═══ MERGE TAB ═══ -->
 <div class="tab-panel" id="tab-merge">
   <div class="scroll">
     <div class="dz" id="mergeDZ">
@@ -573,44 +575,6 @@ input[type=range]{accent-color:var(--acc);cursor:pointer;width:80px}
   </div>
 </div>
 
-<!-- ═══ SIGN TAB ═══ -->
-<div class="tab-panel" id="tab-sign">
-  <div class="sign-empty" id="signEmpty">
-    <div class="big">✍️</div>
-    <div style="font-weight:500;color:var(--text);font-size:.9rem" data-i="sign_ttl">Dosyayı seç</div>
-    <div style="font-size:.75rem" data-i="sign_sub">PDF veya fotoğraf</div>
-    <div class="sign-empty-row">
-      <label class="open-btn">📄 <span data-i="btn_opdf">PDF Aç</span><input type="file" id="signPdfIn" accept="application/pdf,.pdf"></label>
-      <label class="open-btn">🖼️ <span data-i="btn_oimg">Foto Aç</span><input type="file" id="signImgIn" accept="image/*"></label>
-    </div>
-  </div>
-  <div class="sign-loaded" id="signLoaded">
-    <div class="sign-topbar">
-      <div class="sfname"><b id="sFname">-</b> · <span id="sPcount">0</span> <span id="sPlabel" data-i="lbl_pages">sayfa</span></div>
-      <div class="schange">
-        <label class="sch">PDF<input type="file" id="signPdfIn2" accept="application/pdf,.pdf"></label>
-        <label class="sch"><span data-i="btn_oimg">Foto</span><input type="file" id="signImgIn2" accept="image/*"></label>
-      </div>
-    </div>
-    <div class="sign-layout">
-      <div class="sign-thumbs" id="signThumbs"></div>
-      <div class="sign-preview" id="signPreview">
-        <div class="ppw" id="ppw"><canvas id="mainCvs"></canvas></div>
-      </div>
-    </div>
-  </div>
-  <div class="abar" id="signAbar" style="display:none">
-    <button class="abtn-sm red" id="clrSigsBtn">🗑</button>
-    <button class="abtn-main abtn-purple" id="drawSigBtn" data-i="btn_draw_sig">✍️ İmza Çiz</button>
-    <button class="abtn-main abtn-blue" id="dlSignedBtn" data-i="btn_dl_signed">📄 İndir</button>
-  </div>
-  <div class="share-bar" id="signShareBar">
-    <button class="share-btn" id="signShareBtn">🔗 <span data-i="btn_share">Paylaş</span></button>
-    <button class="share-dl" id="signSaveDlBtn">⬇ <span data-i="btn_save">Kaydet</span></button>
-  </div>
-</div>
-
-<!-- ═══ SPLIT TAB ═══ -->
 <div class="tab-panel" id="tab-split">
   <div class="split-empty" id="splitEmpty">
     <div class="big">✂️</div>
@@ -637,9 +601,45 @@ input[type=range]{accent-color:var(--acc);cursor:pointer;width:80px}
     <button class="abtn-sm red" id="splitClearBtn">🗑</button>
     <button class="abtn-main abtn-orange" id="splitBtn" disabled data-i="btn_split">✂️ Böl ve İndir</button>
   </div>
+  <div class="share-bar" id="splitShareBar">
+    <button class="share-btn" id="splitShareBtn">🔗 <span data-i="btn_share">Paylaş</span></button>
+    <button class="share-dl" id="splitSaveDlBtn">⬇ <span data-i="btn_save">Kaydet</span></button>
+  </div>
 </div>
 
-<!-- ═══ CROP MODAL ═══ -->
+<div class="tab-panel" id="tab-sign">
+  <div class="sign-empty" id="signEmpty">
+    <div class="big">✍️</div>
+    <div style="font-weight:500;color:var(--text);font-size:.9rem" data-i="sign_ttl">Dosyayı seç</div>
+    <div style="font-size:.75rem" data-i="sign_sub">PDF veya fotoğraf</div>
+    <div class="sign-empty-row">
+      <label class="open-btn">📄 <span data-i="btn_opdf">PDF Aç</span><input type="file" id="signPdfIn" accept="application/pdf,.pdf"></label>
+      <label class="open-btn">🖼️ <span data-i="btn_oimg">Foto Aç</span><input type="file" id="signImgIn" accept="image/*"></label>
+    </div>
+  </div>
+  <div class="sign-loaded" id="signLoaded">
+    <div class="sign-topbar">
+      <div class="sfname"><b id="sFname">-</b> · <span id="sPcount">0</span> <span id="sPlabel" data-i="lbl_pages">sayfa</span></div>
+      <button class="close-doc-btn" id="closeSignFile" title="Dosyayı Kapat">✕</button>
+    </div>
+    <div class="sign-layout">
+      <div class="sign-thumbs" id="signThumbs"></div>
+      <div class="sign-preview" id="signPreview">
+        <div class="ppw" id="ppw"><canvas id="mainCvs"></canvas></div>
+      </div>
+    </div>
+  </div>
+  <div class="abar" id="signAbar" style="display:none">
+    <button class="abtn-sm red" id="clrSigsBtn">🗑</button>
+    <button class="abtn-main abtn-purple" id="drawSigBtn" data-i="btn_draw_sig">✍️ İmza Çiz</button>
+    <button class="abtn-main abtn-blue" id="dlSignedBtn" data-i="btn_dl_signed">📄 İndir</button>
+  </div>
+  <div class="share-bar" id="signShareBar">
+    <button class="share-btn" id="signShareBtn">🔗 <span data-i="btn_share">Paylaş</span></button>
+    <button class="share-dl" id="signSaveDlBtn">⬇ <span data-i="btn_save">Kaydet</span></button>
+  </div>
+</div>
+
 <div class="modal" id="cropModal">
   <div class="mhdr"><h2>✂️ <span data-i="crop_ttl">Düzenle</span></h2><span id="cropIdx"></span></div>
   <div class="mtb">
@@ -667,7 +667,6 @@ input[type=range]{accent-color:var(--acc);cursor:pointer;width:80px}
   </div>
 </div>
 
-<!-- ═══ SIGNATURE MODAL ═══ -->
 <div class="modal" id="sigModal">
   <div class="mhdr">
     <h2>✍️ <span data-i="sig_ttl">İmzanı Çiz</span></h2>
@@ -697,7 +696,6 @@ input[type=range]{accent-color:var(--acc);cursor:pointer;width:80px}
   </div>
 </div>
 
-<!-- PROGRESS -->
 <div class="prog-bg" id="progBg">
   <div class="prog-card">
     <h3 id="progTitle">İşleniyor…</h3>
@@ -740,7 +738,6 @@ tr:{
   t_no_sig:'⚠️ Önce imzanı çiz!',t_no_placed:'⚠️ Henüz imza eklemedin',
   t_confirm_ph:'Tüm fotoğraflar silinsin mi?',t_confirm_mg:'Liste temizlensin mi?',
   t_pdf_err:'❌ PDF yüklenemedi',t_img_err:'❌ Görsel yüklenemedi',t_err:'❌ Hata: ',
-  // NEW
   nav_split:'PDF Böl',
   btn_share:'Paylaş',btn_save:'Kaydet',
   btn_scan:'📄 Tarama',
@@ -781,7 +778,6 @@ en:{
   t_no_sig:'⚠️ Draw your signature first!',t_no_placed:'⚠️ No signature yet',
   t_confirm_ph:'Delete all photos?',t_confirm_mg:'Clear list?',
   t_pdf_err:'❌ Could not load PDF',t_img_err:'❌ Could not load image',t_err:'❌ Error: ',
-  // NEW
   nav_split:'Split PDF',
   btn_share:'Share',btn_save:'Save',
   btn_scan:'📄 Scan',
@@ -1134,6 +1130,15 @@ let sigs=[],isImg=false,imgW=0,imgH=0;
   .forEach(i=>i.addEventListener('change',e=>{if(e.target.files[0])loadSPdf(e.target.files[0]);e.target.value=''}));
 [document.getElementById('signImgIn'),document.getElementById('signImgIn2')]
   .forEach(i=>i.addEventListener('change',e=>{if(e.target.files[0])loadSImg(e.target.files[0]);e.target.value=''}));
+
+// Close button logic for Sign Tab - FIXED
+document.getElementById('closeSignFile').addEventListener('click',()=>{
+  sDoc=null; sBytes=null; sigs=[]; isImg=false;
+  document.getElementById('signLoaded').style.display='none';
+  document.getElementById('signEmpty').style.display='flex'; // Force flex display
+  document.getElementById('signAbar').style.display='none';
+  document.getElementById('mainCvs').getContext('2d').clearRect(0,0,10,10); // Clear canvas ref
+});
 
 async function loadSPdf(file){
   showProg(tx('p_load_pdf'));
@@ -1501,10 +1506,24 @@ function cropSig(){
    SHARE HELPER
 ══════════════════════════════════════════ */
 async function shareOrDownload(blob, filename){
-  if(navigator.share&&navigator.canShare&&navigator.canShare({files:[new File([blob],filename,{type:blob.type})]})){
-    try{await navigator.share({files:[new File([blob],filename,{type:blob.type})],title:filename});return;}
-    catch(e){if(e.name==='AbortError')return}
+  // Modern Native Sharing
+  if(navigator.share && navigator.canShare){
+    const file = new File([blob], filename, {type: blob.type});
+    const data = {
+      files: [file],
+      title: filename,
+      text: filename
+    };
+    if(navigator.canShare(data)){
+      try{
+        await navigator.share(data);
+        return; 
+      } catch(e) {
+        if(e.name === 'AbortError') return;
+      }
+    }
   }
+  // Fallback
   const u=URL.createObjectURL(blob);
   const a=document.createElement('a');a.href=u;a.download=filename;a.click();
   setTimeout(()=>URL.revokeObjectURL(u),5000);
@@ -1513,12 +1532,15 @@ async function shareOrDownload(blob, filename){
 
 function showShareBar(barId,blob,name){
   const bar=document.getElementById(barId);
+  // CRITICAL FIX: If bar is missing in DOM (should be fixed now), prevent crash
+  if(!bar){console.error('Share bar missing:', barId); return;}
   bar._blob=blob;bar._name=name;
   bar.classList.add('visible');
 }
 
-['photo','merge','sign'].forEach(prefix=>{
+['photo','merge','sign','split'].forEach(prefix=>{
   const bar=document.getElementById(prefix+'ShareBar');
+  if(!bar) return; // safety
   document.getElementById(prefix+'ShareBtn').addEventListener('click',()=>{
     if(bar._blob)shareOrDownload(bar._blob,bar._name);
   });
@@ -1589,6 +1611,8 @@ async function loadSplitPdf(file){
     document.getElementById('splitLoaded').style.display='flex';
     document.getElementById('splitAbar').style.display='flex';
     document.getElementById('splitBtn').disabled=true;
+    // Hide previous share bar if any
+    document.getElementById('splitShareBar').classList.remove('visible');
     await buildSpThumbs();
   }catch(e){console.error(e);toast(tx('t_pdf_err'))}
   hideProg();
@@ -1646,6 +1670,7 @@ document.getElementById('splitClearBtn').addEventListener('click',()=>{
   document.getElementById('splitEmpty').style.display='';
   document.getElementById('splitAbar').style.display='none';
   document.getElementById('splitPageGrid').innerHTML='';
+  document.getElementById('splitShareBar').classList.remove('visible');
 });
 
 document.getElementById('splitBtn').addEventListener('click',async()=>{
@@ -1660,8 +1685,10 @@ document.getElementById('splitBtn').addEventListener('click',async()=>{
     const bytes=await out.save();
     const blob=new Blob([bytes],{type:'application/pdf'});
     const name=`split-${pages[0]}-${pages[pages.length-1]}-${Date.now()}.pdf`;
-    const u=URL.createObjectURL(blob);const a=document.createElement('a');a.href=u;a.download=name;a.click();setTimeout(()=>URL.revokeObjectURL(u),5000);
+    dlBytes(bytes,name);
     toast(tx('t_split_ok'));
+    // CRITICAL FIX: Reference the newly created ID
+    showShareBar('splitShareBar',blob,name);
   }catch(e){console.error(e);toast(tx('t_split_err'))}
   hideProg();document.getElementById('splitBtn').disabled=false;
 });
